--- a/app/src/main/res/layout/fragment_machine.xml
+++ b/app/src/main/res/layout/fragment_machine.xml
@@ -115,7 +115,7 @@
 
             <TextView
                 android:id="@+id/join_title"
-                top
+
                 android:layout_width="258dp"
                 android:layout_height="42dp"
                 android:layout_marginTop="136dp"
@@ -133,7 +133,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/m_title2"
+                android:id="@+id/trans_edit"
                 android:layout_width="255dp"
                 android:layout_height="37dp"
                 android:layout_marginTop="40dp"
