--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -33,8 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="66dp"
-        app:layout_constraintGuide_percent="0.1" />
+        app:layout_constraintGuide_end="370dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline12"
