--- a/app/src/main/res/layout/fragment_machine.xml
+++ b/app/src/main/res/layout/fragment_machine.xml
@@ -132,32 +132,38 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/trans_edit"
-                android:layout_width="255dp"
-                android:layout_height="37dp"
-                android:layout_marginTop="40dp"
-                android:layout_marginBottom="60dp"
-                android:backgroundTint="@color/seco"
-                android:drawableRight="@drawable/ic_arrow_forward"
-                android:drawablePadding="-52dp"
-                android:fontFamily="@font/sleigothic"
-                android:gravity="center"
-                android:text="기기 정보 수정"
-                android:textColor="@color/light_white"
-                android:textSize="16sp"
-                app:layout_constraintBottom_toTopOf="@+id/guideline25"
-                app:layout_constraintEnd_toStartOf="@+id/guideline6"
-                app:layout_constraintStart_toStartOf="@+id/guideline4"
-                app:layout_constraintTop_toBottomOf="@+id/btn_register"
-                app:layout_constraintVertical_bias="1.0" />
-
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline25"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 app:layout_constraintGuide_percent="0.95" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="60dp"
+                android:background="@color/transfer"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="기기정보수정으로"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toTopOf="@+id/guideline25"
+                app:layout_constraintEnd_toStartOf="@+id/guideline6"
+                app:layout_constraintStart_toStartOf="@+id/guideline4"
+                app:layout_constraintTop_toBottomOf="@+id/btn_register" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_marginStart="-14dp"
+                android:background="@drawable/ic_arrow_forward"
+                app:layout_constraintBottom_toBottomOf="@+id/button2"
+                app:layout_constraintStart_toEndOf="@+id/button2"
+                app:layout_constraintTop_toTopOf="@+id/button2" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
