--- a/app/src/main/res/layout/fragment_machine2_.xml
+++ b/app/src/main/res/layout/fragment_machine2_.xml
@@ -20,7 +20,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintVertical_bias="0.0">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -60,26 +60,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 app:layout_constraintGuide_percent="0.45" />
-
-            <TextView
-                android:id="@+id/m_title"
-                android:layout_width="247dp"
-                android:layout_height="42dp"
-                android:layout_marginTop="40dp"
-                android:layout_marginBottom="60dp"
-                android:backgroundTint="@color/seco"
-                android:drawableStart="@drawable/ic_arrow_left"
-                android:drawablePadding="-52dp"
-                android:fontFamily="@font/sleigothic"
-                android:gravity="center"
-                android:text="기기 정보 등록으로 "
-                android:textColor="@color/light_white"
-                android:textSize="16sp"
-                app:layout_constraintBottom_toTopOf="@+id/guideline25"
-                app:layout_constraintEnd_toStartOf="@+id/guideline6"
-                app:layout_constraintStart_toStartOf="@+id/guideline4"
-                app:layout_constraintTop_toBottomOf="@+id/btn_register"
-                app:layout_constraintVertical_bias="1.0" />
 
             <Button
                 android:id="@+id/btn_register"
@@ -158,6 +138,34 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 app:layout_constraintGuide_percent="0.95" />
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="60dp"
+                android:background="@color/transfer"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="기기등록으로"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toTopOf="@+id/guideline25"
+                app:layout_constraintEnd_toStartOf="@+id/guideline6"
+                app:layout_constraintStart_toStartOf="@+id/guideline4"
+                app:layout_constraintTop_toBottomOf="@+id/btn_register" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_marginEnd="-14dp"
+                android:layout_marginBottom="2dp"
+                android:background="@drawable/ic_arrow_left"
+                app:layout_constraintBottom_toBottomOf="@+id/button"
+                app:layout_constraintEnd_toStartOf="@+id/button"
+                app:layout_constraintTop_toTopOf="@+id/button"
+                app:layout_constraintVertical_bias="0.586" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
