--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -92,7 +92,8 @@
                 app:layout_constraintBottom_toBottomOf="@id/guideline40"
                 app:layout_constraintEnd_toStartOf="@+id/guideline38"
                 app:layout_constraintStart_toStartOf="@+id/guideline39"
-                app:layout_constraintTop_toTopOf="@+id/guideline33" />
+                app:layout_constraintTop_toTopOf="@+id/guideline33"
+                tools:ignore="SpeakableTextPresentCheck" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
