--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -180,7 +180,6 @@
         android:layout_marginTop="15dp"
         android:background="@drawable/box_yellow_round_gradation"
         android:fontFamily="@font/sleigothic"
-        android:onClick="onclick"
         android:text="id 중복체크"
         android:textColor="@color/light_white"
         android:textSize="18sp"
@@ -195,7 +194,6 @@
         android:layout_height="40dp"
         android:background="@drawable/button_click"
         android:fontFamily="@font/sleigothic"
-        android:onClick="onclick"
         android:text="저장"
         android:textColor="@color/light_white"
         android:textSize="18sp"
@@ -203,19 +201,20 @@
         app:layout_constraintBottom_toTopOf="@+id/guideline42"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline11" />
+        app:layout_constraintStart_toStartOf="@+id/guideline11"
+        app:layout_constraintTop_toBottomOf="@+id/join_aff"
+        app:layout_constraintVertical_bias="0.931" />
 
     <android.widget.Button
         android:id="@+id/btn_back"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:background="@drawable/button_round_gradation_n"
+        android:background="@drawable/button_round"
         android:backgroundTint="@null"
         android:fontFamily="@font/sleigothic"
-        android:onClick="onclick"
         android:text="로그인 페이지로"
         android:textColor="@color/prim"
-        android:textSize="16sp"
+        android:textSize="13sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline18"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline15"
