--- a/app/src/main/res/layout/all_worker_list.xml
+++ b/app/src/main/res/layout/all_worker_list.xml
@@ -10,12 +10,13 @@
 
     <View
         android:id="@+id/view3"
-        android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="28dp"
+        android:layout_width="390dp"
+        android:layout_height="110dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/box_yellow_round_gradation"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -45,10 +46,11 @@
         android:id="@+id/img"
         android:layout_width="90dp"
         android:layout_height="90dp"
+        android:layout_marginStart="8dp"
         android:background="@drawable/icon_circle"
         android:backgroundTintMode="@null"
         app:layout_constraintBottom_toBottomOf="@+id/view3"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/view3"
         app:layout_constraintTop_toTopOf="@+id/view3"
         tools:srcCompat="@drawable/worker_icon" />
 
