--- a/app/src/main/res/layout/fragment_admin_edit.xml
+++ b/app/src/main/res/layout/fragment_admin_edit.xml
@@ -99,7 +99,7 @@
         android:id="@+id/edit_id"
         android:layout_width="0dp"
         android:layout_height="47dp"
-        android:background="@drawable/button_round"
+        android:background="@drawable/edittext_focus"
         android:backgroundTint="@color/white"
         android:clickable="false"
         android:ems="10"
@@ -135,7 +135,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
-        android:background="@drawable/button_round"
+        android:background="@drawable/edittext_focus"
         android:backgroundTint="@color/white"
         android:ems="10"
         android:fontFamily="@font/sleigothic"
@@ -169,7 +169,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
-        android:background="@drawable/button_round"
+        android:background="@drawable/edittext_focus"
         android:backgroundTint="@color/white"
         android:ems="10"
         android:fontFamily="@font/sleigothic"
@@ -187,7 +187,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
-        android:background="@drawable/button_round"
+        android:background="@drawable/edittext_focus"
         android:backgroundTint="@color/white"
         android:ems="10"
         android:fontFamily="@font/sleigothic"
@@ -205,7 +205,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
-        android:background="@drawable/button_round"
+        android:background="@drawable/edittext_focus"
         android:backgroundTint="@color/white"
         android:ems="10"
         android:fontFamily="@font/sleigothic"
@@ -227,19 +227,22 @@
         android:textColor="@color/light_white"
         android:textSize="18sp"
         app:backgroundTint="@null"
+        app:layout_constraintBottom_toTopOf="@+id/guideline16"
         app:layout_constraintEnd_toStartOf="@+id/guideline9"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline14"
-        tools:layout_editor_absoluteY="585dp" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_dept"
+        app:layout_constraintVertical_bias="1.0" />
 
     <android.widget.Button
         android:id="@+id/btn_back_edit"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:background="@drawable/button_round_gradation_n"
+        android:background="@drawable/button_round"
         android:fontFamily="@font/sleigothic"
         android:text="뒤로가기"
         android:textColor="#ffb606"
-        android:textSize="18sp"
+        android:textSize="13sp"
         app:backgroundTint="@null"
         app:layout_constraintEnd_toStartOf="@+id/guideline28"
         app:layout_constraintStart_toStartOf="@+id/guideline29"
