--- a/app/src/main/res/layout/fragment_machine.xml
+++ b/app/src/main/res/layout/fragment_machine.xml
@@ -62,7 +62,7 @@
                 app:layout_constraintGuide_percent="0.45" />
 
             <Button
-                android:id="@+id/btn_register"
+                android:id="@+id/btn_modify"
                 android:layout_width="0dp"
                 android:layout_height="47dp"
                 android:layout_marginTop="15dp"
@@ -118,7 +118,7 @@
 
                 android:layout_width="258dp"
                 android:layout_height="42dp"
-                android:layout_marginTop="136dp"
+                android:layout_marginTop="100dp"
                 android:layout_marginBottom="15dp"
                 android:backgroundTint="@color/seco"
                 android:fontFamily="@font/sleigothic"
@@ -140,12 +140,12 @@
                 app:layout_constraintGuide_percent="0.95" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/btn_mc_update"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
                 android:layout_marginBottom="60dp"
-                android:background="@color/transfer"
+                android:background="#00000000"
                 android:fontFamily="@font/sleigothic"
                 android:gravity="center"
                 android:text="기기정보수정으로"
@@ -153,7 +153,7 @@
                 app:layout_constraintBottom_toTopOf="@+id/guideline25"
                 app:layout_constraintEnd_toStartOf="@+id/guideline6"
                 app:layout_constraintStart_toStartOf="@+id/guideline4"
-                app:layout_constraintTop_toBottomOf="@+id/btn_register" />
+                app:layout_constraintTop_toBottomOf="@+id/btn_modify" />
 
             <TextView
                 android:id="@+id/textView7"
@@ -161,9 +161,9 @@
                 android:layout_height="28dp"
                 android:layout_marginStart="-14dp"
                 android:background="@drawable/ic_arrow_forward"
-                app:layout_constraintBottom_toBottomOf="@+id/button2"
-                app:layout_constraintStart_toEndOf="@+id/button2"
-                app:layout_constraintTop_toTopOf="@+id/button2" />
+                app:layout_constraintBottom_toBottomOf="@+id/btn_mc_update"
+                app:layout_constraintStart_toEndOf="@+id/btn_mc_update"
+                app:layout_constraintTop_toTopOf="@+id/btn_mc_update" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
