--- a/app/src/main/res/layout/fragment_machine2_.xml
+++ b/app/src/main/res/layout/fragment_machine2_.xml
@@ -62,14 +62,13 @@
                 app:layout_constraintGuide_percent="0.45" />
 
             <Button
-                android:id="@+id/btn_register"
+                android:id="@+id/btn_modify"
                 android:layout_width="0dp"
                 android:layout_height="47dp"
                 android:layout_marginTop="15dp"
                 android:background="@drawable/button_click"
                 android:fontFamily="@font/sleigothic"
-                android:onClick="onclick"
-                android:text="기기 등록"
+                android:text="기기 수정"
                 android:textColor="@color/light_white"
                 android:textSize="18sp"
                 app:backgroundTint="@null"
@@ -118,7 +117,7 @@
 
                 android:layout_width="300dp"
                 android:layout_height="44dp"
-                android:layout_marginTop="136dp"
+                android:layout_marginTop="100dp"
                 android:layout_marginBottom="15dp"
                 android:backgroundTint="@color/seco"
                 android:fontFamily="@font/sleigothic"
@@ -140,12 +139,12 @@
                 app:layout_constraintGuide_percent="0.95" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/btn_back_mcf"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
                 android:layout_marginBottom="60dp"
-                android:background="@color/transfer"
+                android:background="#00000000"
                 android:fontFamily="@font/sleigothic"
                 android:gravity="center"
                 android:text="기기등록으로"
@@ -153,7 +152,7 @@
                 app:layout_constraintBottom_toTopOf="@+id/guideline25"
                 app:layout_constraintEnd_toStartOf="@+id/guideline6"
                 app:layout_constraintStart_toStartOf="@+id/guideline4"
-                app:layout_constraintTop_toBottomOf="@+id/btn_register" />
+                app:layout_constraintTop_toBottomOf="@+id/btn_modify" />
 
             <TextView
                 android:id="@+id/textView5"
@@ -162,9 +161,9 @@
                 android:layout_marginEnd="-14dp"
                 android:layout_marginBottom="2dp"
                 android:background="@drawable/ic_arrow_left"
-                app:layout_constraintBottom_toBottomOf="@+id/button"
-                app:layout_constraintEnd_toStartOf="@+id/button"
-                app:layout_constraintTop_toTopOf="@+id/button"
+                app:layout_constraintBottom_toBottomOf="@+id/btn_back_mcf"
+                app:layout_constraintEnd_toStartOf="@+id/btn_back_mcf"
+                app:layout_constraintTop_toTopOf="@+id/btn_back_mcf"
                 app:layout_constraintVertical_bias="0.586" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
