--- a/app/src/main/res/layout/fragment_worker_list_page.xml
+++ b/app/src/main/res/layout/fragment_worker_list_page.xml
@@ -17,6 +17,20 @@
         app:layout_constraintGuide_percent="0.3" />
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline56"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.45" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline57"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.55" />
+
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline50"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,11 +50,11 @@
         android:layout_height="32dp"
         android:background="@drawable/ic_arrow_forward"
         android:backgroundTint="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_back_medit"
-        app:layout_constraintEnd_toEndOf="@+id/btn_back_medit"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_back_medit2"
+        app:layout_constraintEnd_toEndOf="@+id/btn_back_medit2"
         app:layout_constraintHorizontal_bias="0.895"
-        app:layout_constraintStart_toStartOf="@+id/btn_back_medit"
-        app:layout_constraintTop_toTopOf="@+id/btn_back_medit" />
+        app:layout_constraintStart_toStartOf="@+id/btn_back_medit2"
+        app:layout_constraintTop_toTopOf="@+id/btn_back_medit2" />
 
     <View
         android:id="@+id/view3"
@@ -99,50 +113,27 @@
         app:layout_constraintTop_toTopOf="@+id/guideline48"
         />
 
-    <Button
-        android:id="@+id/btn_back_medit7"
-        android:layout_width="133dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="10dp"
-        android:background="@drawable/button_round_blank"
-        android:backgroundTint="@color/light_white"
-        android:fontFamily="@font/sleigothic"
-        android:onClick="onclick"
-        android:paddingLeft="22dp"
-        android:paddingTop="5dp"
-        android:text="목록으로"
-        android:textAlignment="viewEnd"
-        android:textColor="@color/light_white"
-        android:textSize="16sp"
-        app:backgroundTint="@null"
-
-        app:layout_constraintBottom_toBottomOf="@+id/tv_id"
-        app:layout_constraintEnd_toStartOf="@+id/guideline44"
-        app:layout_constraintStart_toEndOf="@+id/tv_id"
-        app:layout_constraintTop_toTopOf="@+id/tv_id"
-        app:layout_constraintVertical_bias="0.55" />
-
     <TextView
         android:id="@+id/tv_id4"
-        android:layout_width="227dp"
-        android:layout_height="37dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="102dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:fontFamily="@font/sleigothic"
         android:gravity="center"
-        android:text="12월 23일 오후 3시 32분"
-        android:textColor="@color/black"
+        android:text="12월 23일"
+        android:textColor="@color/seco"
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline24"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline50"
-        app:layout_constraintTop_toTopOf="@+id/view" />
+        app:layout_constraintTop_toTopOf="@+id/view5" />
 
     <TableLayout
         android:id="@+id/tableLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:backgroundTint="@color/black"
+
         app:layout_constraintBottom_toTopOf="@+id/guideline52"
         app:layout_constraintEnd_toStartOf="@+id/guideline51"
         app:layout_constraintStart_toStartOf="@+id/guideline50"
@@ -165,7 +156,7 @@
                 android:fontFamily="@font/sleigothic"
                 android:gravity="center"
                 android:text="안전모 잠금 여부"
-                android:textColor="@color/black"
+                android:textColor="@color/seco"
                 android:textSize="16sp" />
 
             <TextView
@@ -202,7 +193,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:backgroundTint="@color/prim"
                 android:drawableTop="@drawable/icon_size_shock"
                 android:drawablePadding="5dp"
                 android:paddingTop="10dp" />
@@ -212,24 +202,193 @@
     </TableLayout>
 
     <Button
-        android:id="@+id/btn_back_medit"
+        android:id="@+id/btn_back_medit2"
         android:layout_width="0dp"
         android:layout_height="42dp"
         android:background="@drawable/button_round_blank"
         android:backgroundTint="@color/light_white"
         android:fontFamily="@font/sleigothic"
-        android:onClick="onclick"
         android:paddingLeft="19dp"
         android:paddingTop="5dp"
-        android:text="근로자정보수정"
-        android:textAlignment="viewStart"
+        android:text="수정"
+        android:textAlignment="gravity"
         android:textColor="@color/light_white"
         android:textSize="16sp"
         app:backgroundTint="@null"
-        app:layout_constraintBottom_toTopOf="@+id/guideline49"
-        app:layout_constraintEnd_toStartOf="@+id/guideline24"
+        app:layout_constraintBottom_toTopOf="@+id/guideline32"
+        app:layout_constraintEnd_toStartOf="@+id/guideline51"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline21" />
+
+        app:layout_constraintStart_toStartOf="@+id/guideline57"
+        app:layout_constraintTop_toTopOf="@+id/guideline49"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TableLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline55"
+        app:layout_constraintEnd_toStartOf="@+id/guideline51"
+        app:layout_constraintStart_toStartOf="@+id/guideline50"
+        app:layout_constraintTop_toTopOf="@+id/guideline54">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="일" />
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="32dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="월" />
+
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="화" />
+
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="수" />
+
+            <TextView
+                android:id="@+id/textView13"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="목" />
+
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="금" />
+
+            <TextView
+                android:id="@+id/textView15"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="토" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="60dp">
+
+            <TextView
+                android:id="@+id/textView16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2.5dp"
+                android:layout_weight="1"
+                android:background="@drawable/smallbox_yellow"
+                android:backgroundTint="@color/black"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="19일" />
+
+            <TextView
+                android:id="@+id/textView17"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2.5dp"
+                android:layout_weight="1"
+                android:background="@drawable/smallbox_yellow"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="20일" />
+
+            <TextView
+                android:id="@+id/textView18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2.5dp"
+                android:layout_weight="1"
+                android:background="@drawable/smallbox_yellow"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="21일" />
+
+            <TextView
+                android:id="@+id/textView19"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2.5dp"
+                android:layout_weight="1"
+                android:background="@drawable/smallbox_yellow"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="22일" />
+
+            <TextView
+                android:id="@+id/textView20"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2.5dp"
+                android:layout_weight="1"
+                android:background="@drawable/smallbox_yellow"
+                android:backgroundTint="@color/seco"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="23일"
+                android:textColor="@color/light_white" />
+
+            <TextView
+                android:id="@+id/textView21"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2.5dp"
+                android:layout_weight="1"
+                android:background="@drawable/smallbox_yellow"
+                android:backgroundTint="@color/seco"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="24일"
+                android:textColor="@color/light_white" />
+
+            <TextView
+                android:id="@+id/textView22"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2.5dp"
+                android:layout_weight="1"
+                android:background="@drawable/smallbox_yellow"
+                android:backgroundTint="@color/black"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="25일" />
+        </TableRow>
+
+    </TableLayout>
 
     <TextView
         android:id="@+id/textView2"
@@ -237,11 +396,11 @@
         android:layout_height="25dp"
         android:background="@drawable/edit"
         android:backgroundTint="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_back_medit"
-        app:layout_constraintEnd_toEndOf="@+id/btn_back_medit"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_back_medit2"
+        app:layout_constraintEnd_toEndOf="@+id/btn_back_medit2"
         app:layout_constraintHorizontal_bias="0.895"
-        app:layout_constraintStart_toStartOf="@+id/btn_back_medit"
-        app:layout_constraintTop_toTopOf="@+id/btn_back_medit" />
+        app:layout_constraintStart_toStartOf="@+id/btn_back_medit2"
+        app:layout_constraintTop_toTopOf="@+id/btn_back_medit2" />
 
     <TextView
         android:id="@+id/textView3"
@@ -261,28 +420,31 @@
         android:id="@+id/btn_back_medit5"
         android:layout_width="0dp"
         android:layout_height="42dp"
-        android:layout_marginTop="15dp"
         android:background="@drawable/button_round_blank"
         android:backgroundTint="@color/seco"
         android:fontFamily="@font/sleigothic"
         android:onClick="onclick"
         android:paddingLeft="19dp"
         android:paddingTop="5dp"
-        android:text="근로자삭제"
-        android:textAlignment="viewStart"
+        android:text="삭제"
+        android:textAlignment="gravity"
         android:textColor="@color/seco"
         android:textSize="16sp"
         app:backgroundTint="@null"
-        app:layout_constraintEnd_toStartOf="@+id/guideline24"
-        app:layout_constraintStart_toStartOf="@+id/guideline21"
-        app:layout_constraintTop_toBottomOf="@+id/btn_back_medit" />
+        app:layout_constraintBottom_toTopOf="@+id/guideline32"
+
+        app:layout_constraintEnd_toStartOf="@+id/guideline56"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline50"
+        app:layout_constraintTop_toTopOf="@+id/guideline49"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/img"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_marginStart="16dp"
-        android:background="@drawable/icon_circle"
+
         android:backgroundTintMode="@null"
         app:layout_constraintBottom_toTopOf="@+id/guideline32"
         app:layout_constraintStart_toStartOf="@+id/guideline20"
@@ -368,18 +530,34 @@
         app:layout_constraintGuide_percent="0.5" />
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline54"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.57" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline55"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.68" />
+
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline49"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.83" />
+        app:layout_constraintGuide_percent="0.9" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline32"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.95" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintGuide_percent="0.98" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline41"
@@ -388,15 +566,15 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.75" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:src="@drawable/ic_arrow_left"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_back_medit7"
-        app:layout_constraintEnd_toEndOf="@+id/btn_back_medit7"
-        app:layout_constraintHorizontal_bias="0.1"
-        app:layout_constraintStart_toStartOf="@+id/btn_back_medit7"
-        app:layout_constraintTop_toTopOf="@+id/btn_back_medit7" />
+    <android.widget.Button
+        android:id="@+id/btn_back_workerlist"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
+        android:background="@drawable/xback"
+        android:backgroundTint="#424040"
+        app:layout_constraintEnd_toStartOf="@+id/guideline26"
+        app:layout_constraintTop_toTopOf="@+id/guideline31" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
