--- a/app/src/main/res/layout/fragment_worker_list_page.xml
+++ b/app/src/main/res/layout/fragment_worker_list_page.xml
@@ -97,7 +97,7 @@
         app:layout_constraintStart_toStartOf="@+id/guideline43"
         app:layout_constraintTop_toTopOf="@+id/guideline45"
         app:layout_constraintVertical_bias="0.413"
-        />
+        android:alpha="0.5"/>
 
     <View
 
@@ -111,23 +111,7 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline44"
         app:layout_constraintStart_toStartOf="@+id/guideline43"
         app:layout_constraintTop_toTopOf="@+id/guideline48"
-        />
-
-    <TextView
-        android:id="@+id/tv_id4"
-        android:layout_width="102dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="8dp"
-        android:layout_weight="1"
-        android:fontFamily="@font/sleigothic"
-        android:gravity="center"
-        android:text="12월 23일"
-        android:textColor="@color/seco"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline24"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline50"
-        app:layout_constraintTop_toTopOf="@+id/view5" />
+        android:alpha="0.5"/>
 
     <TableLayout
         android:id="@+id/tableLayout"
@@ -196,6 +180,150 @@
                 android:drawableTop="@drawable/icon_size_shock"
                 android:drawablePadding="5dp"
                 android:paddingTop="10dp" />
+
+        </TableRow>
+
+    </TableLayout>
+
+    <TextView
+        android:id="@+id/tv_id4"
+        android:layout_width="102dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="8dp"
+        android:layout_weight="1"
+        android:fontFamily="@font/sleigothic"
+        android:gravity="center"
+        android:text="12월 23일"
+        android:textColor="@color/seco"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline24"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline50"
+        app:layout_constraintTop_toTopOf="@+id/view5" />
+
+    <TextView
+        android:id="@+id/tv_id12"
+        android:layout_width="102dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="4dp"
+        android:layout_weight="1"
+        android:fontFamily="@font/sleigothic"
+        android:gravity="center"
+        android:text="근로자 정보"
+
+        android:textColor="@color/seco"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline44"
+        app:layout_constraintHorizontal_bias="0.096"
+        app:layout_constraintStart_toStartOf="@+id/view"
+        app:layout_constraintTop_toTopOf="@+id/view" />
+
+    <TableLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline64"
+        app:layout_constraintEnd_toStartOf="@+id/guideline51"
+        app:layout_constraintStart_toStartOf="@+id/guideline50"
+        app:layout_constraintTop_toTopOf="@+id/guideline63">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/tv_id5"
+                android:layout_width="102dp"
+                android:layout_height="36dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="근로자 연락처"
+                android:textColor="@color/seco"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/tv_id7"
+                android:layout_width="102dp"
+                android:layout_height="36dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="010-0000-0000"
+                android:textColor="@color/seco"
+                android:textSize="20sp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/tv_id6"
+                android:layout_width="102dp"
+                android:layout_height="36dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="근로자 소속"
+                android:textColor="@color/seco"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/tv_id8"
+                android:layout_width="102dp"
+                android:layout_height="36dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="스마트인재개발원"
+                android:textColor="@color/seco"
+                android:textSize="20sp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/tv_id11"
+                android:layout_width="102dp"
+                android:layout_height="36dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="출/퇴근시간"
+                android:textColor="@color/seco"
+                android:textSize="20sp" />
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/tv_id9"
+                    android:layout_width="102dp"
+                    android:layout_height="36dp"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/sleigothic"
+                    android:gravity="center"
+                    android:text="09:00"
+                    android:textColor="@color/seco"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/tv_id10"
+                    android:layout_width="102dp"
+                    android:layout_height="36dp"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/sleigothic"
+                    android:gravity="center"
+                    android:text="18:00"
+                    android:textColor="@color/seco"
+                    android:textSize="20sp" />
+            </TableRow>
 
         </TableRow>
 
@@ -311,7 +439,7 @@
                 android:layout_margin="2.5dp"
                 android:layout_weight="1"
                 android:background="@drawable/smallbox_yellow"
-                android:backgroundTint="@color/black"
+                android:backgroundTint="@color/gray"
                 android:fontFamily="@font/sleigothic"
                 android:gravity="center"
                 android:text="19일" />
@@ -382,7 +510,7 @@
                 android:layout_margin="2.5dp"
                 android:layout_weight="1"
                 android:background="@drawable/smallbox_yellow"
-                android:backgroundTint="@color/black"
+                android:backgroundTint="@color/gray"
                 android:fontFamily="@font/sleigothic"
                 android:gravity="center"
                 android:text="25일" />
@@ -502,6 +630,20 @@
         app:layout_constraintGuide_percent="0.2" />
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline63"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.27" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline64"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.46" />
+
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline46"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -513,14 +655,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.46" />
+        app:layout_constraintGuide_percent="0.86" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline53"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.27" />
+        app:layout_constraintGuide_percent="0.7" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline48"
@@ -564,7 +706,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.75" />
+        app:layout_constraintGuide_percent="0.88" />
 
     <android.widget.Button
         android:id="@+id/btn_back_workerlist"
