--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/admin_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradation"
@@ -110,7 +111,8 @@
         app:layout_constraintHorizontal_bias="0.083"
         app:layout_constraintStart_toStartOf="@+id/guideline58"
         app:layout_constraintTop_toTopOf="@+id/guideline47"
-        app:layout_constraintVertical_bias="0.062" />
+        app:layout_constraintVertical_bias="0.062"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <ImageView
         android:id="@+id/logo_setting"
@@ -207,7 +209,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline88" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btn_modification"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="#00000000"
@@ -224,7 +226,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline91" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/btn_logout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="#00000000"
@@ -249,7 +251,7 @@
         android:background="@drawable/ic_arrow_forward"
         android:backgroundTint="@color/seco"
 
-        app:layout_constraintBottom_toBottomOf="@+id/button6"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_logout"
         app:layout_constraintEnd_toStartOf="@+id/guideline81"
         app:layout_constraintStart_toStartOf="@+id/guideline80"
         app:layout_constraintTop_toTopOf="@+id/guideline93"
@@ -278,7 +280,7 @@
 
         app:layout_constraintBottom_toTopOf="@+id/guideline92"
         app:layout_constraintEnd_toStartOf="@+id/guideline81"
-        app:layout_constraintStart_toStartOf="@+id/button5"
+        app:layout_constraintStart_toStartOf="@+id/btn_modification"
         app:layout_constraintTop_toTopOf="@+id/guideline91"
         app:layout_constraintVertical_bias="0.272" />
 
@@ -304,7 +306,8 @@
         app:layout_constraintBottom_toTopOf="@+id/guideline89"
         app:layout_constraintEnd_toStartOf="@+id/guideline86"
         app:layout_constraintStart_toStartOf="@+id/guideline85"
-        app:layout_constraintTop_toTopOf="@+id/guideline62" />
+        app:layout_constraintTop_toTopOf="@+id/guideline62"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
         android:id="@+id/button2"
@@ -315,7 +318,8 @@
         app:layout_constraintBottom_toTopOf="@+id/guideline89"
         app:layout_constraintEnd_toStartOf="@+id/guideline84"
         app:layout_constraintStart_toStartOf="@+id/guideline83"
-        app:layout_constraintTop_toTopOf="@+id/guideline62" />
+        app:layout_constraintTop_toTopOf="@+id/guideline62"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/textView27"
