--- a/app/src/main/res/layout/fragment_all_worker.xml
+++ b/app/src/main/res/layout/fragment_all_worker.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout"
+    android:id="@+id/list_frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradation"
@@ -83,15 +83,14 @@
                 android:id="@+id/listview_worker"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:clipChildren="true"
+                android:divider="@null"
+                android:dividerHeight="0dp"
                 app:layout_constraintBaseline_toBottomOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/guideline36"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/guideline5"
-                tools:layout_editor_absoluteY="731dp"
-                android:divider="@null"
-                android:dividerHeight="0dp"
-                />
+                app:layout_constraintTop_toTopOf="@id/guideline5" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
